scrollbar resize; title clipping on mobile fixed

--- a/src/App.css
+++ b/src/App.css
@@ -241,6 +241,8 @@ p {
   background-color: black;
   border: 1px solid rgb(58, 196, 4);
   border-radius: 5px;
+  width: .5vw;
+  
 }
 ::-webkit-scrollbar-thumb {
   background-color: rgb(58, 196, 4);
