--- a/src/components/Modals.css
+++ b/src/components/Modals.css
@@ -112,6 +112,7 @@ a {
       justify-content: space-between;
       height: 3vw;
       padding-bottom: 3%;
+      padding-top: 2%;
     }
     .close {
       
